<resources>
    <string name="app_name">BOUTIQUES</string>
    <string name="tab_text_1">Calcas</string>
    <string name="tab_text_2">Caminzas</string>
    <string name="tab_text_3">Calsados</string>
    <string name="tab_text_4">Acessorios</string>
    <string name="numero_de_telefone">numero de telefone</string>
    <string name="enter_password">Palavra-Passe</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="esqueceu_palavra_passe">Esqueceu Palavra-Passe</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="procurar_calcas">Procurar Calcas</string>
    <string name="procurar_acessorios">Procurar acessorios</string>
    <string name="procurar_calcados">Procurar Calcados</string>
    <string name="procurar_camisa">Procurar camisa</string>


    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
</resources>
